Add Comment IReadableListAnimal<out T>

--- a/AdaTech.OO2.Concepts/ConceptsConsole/ConceptsConsole.csproj
+++ b/AdaTech.OO2.Concepts/ConceptsConsole/ConceptsConsole.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\AbstractClass\AbstractClass.csproj" />
     <ProjectReference Include="..\GenericsConcepts\GenericsConcepts.csproj" />
+    <ProjectReference Include="..\InterfaceConcepts\InterfaceConcepts.csproj" />
   </ItemGroup>
 
 </Project>
