Adicionado conceitos de generics

--- a/AdaTech.OO2.Concepts/ApresentationConsole/ApresentationConsole.csproj
+++ b/AdaTech.OO2.Concepts/ApresentationConsole/ApresentationConsole.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AbstractClass\AbstractClass.csproj" />
+    <ProjectReference Include="..\GenericsConcepts\GenericsConcepts.csproj" />
   </ItemGroup>
 
 </Project>
