--- a/AdaTech.OO2.Concepts/ConceptsConsole/ConceptsConsole.csproj
+++ b/AdaTech.OO2.Concepts/ConceptsConsole/ConceptsConsole.csproj
@@ -8,7 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AbstractClass\AbstractClass.csproj" />
+    <ProjectReference Include="..\DependencyInjector\DependencyInjector.csproj" />
     <ProjectReference Include="..\GenericsConcepts\GenericsConcepts.csproj" />
     <ProjectReference Include="..\InterfaceConcepts\InterfaceConcepts.csproj" />
   </ItemGroup>
