--- a/AdaTech.OO2.Concepts/ApresentationConsole/ApresentationConsole.csproj
+++ b/AdaTech.OO2.Concepts/ApresentationConsole/ApresentationConsole.csproj
@@ -8,7 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AbstractClass\AbstractClass.csproj" />
+    <ProjectReference Include="..\DependencyInjector\DependencyInjector.csproj" />
     <ProjectReference Include="..\GenericsConcepts\GenericsConcepts.csproj" />
   </ItemGroup>
 
