--- a/AdaTech.OO2.Concepts/ApresentationConsole/ApresentationConsole.csproj
+++ b/AdaTech.OO2.Concepts/ApresentationConsole/ApresentationConsole.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\AbstractClass\AbstractClass.csproj" />
     <ProjectReference Include="..\DependencyInjector\DependencyInjector.csproj" />
     <ProjectReference Include="..\GenericsConcepts\GenericsConcepts.csproj" />
+    <ProjectReference Include="..\Solid\Solid.csproj" />
   </ItemGroup>
 
 </Project>
